--- a/self-powered-vehicle-blog.html
+++ b/self-powered-vehicle-blog.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="icon/favicon.ico">
+
+    <title>OrgName - ProjName</title>
+
+  </head>
+
+  <body>
+
+    <h1 style="text-align: center;">ProjectName Blog</h1>
+    <p align="center" style="color:blue;">
+      describe how this fits your organization
+    </p>
+    <h2>Acknowledge</h2>
+      <p>describe and acknowledge the help you got</p>
+      <dl>
+        <dt><strong>Person 1</strong></dt>
+          <dd>describe how they helped and the link to their web page</dd>
+        <dt><strong>Person 2</strong></dt>
+          <dd>describe how they helped and the link to tweb page</dd>
+      </dl>
+      
+    <h2>Ideas</h2>
+      <p>how you could extend or go further with this project</p>
+      <dl>
+        <dt>Idea 1</dt>
+	  			<dd>description of idea 1</dd>
+        <dt>Idea 2</dt>
+					<dd>description of idea 2</dd>
+      </dl>
+
+    <h2>Technology</h2>
+	<p>describe or define the most interesting
+        or helpful technical idea learned in each category below</p>
+        <dl>
+          <dt><strong>HTML</strong></dt>
+          <dd>describe/define something learned</dd>
+          <dt><strong>git</strong></dt>
+          <dd>describe/define something learned</dd>
+          <dt><strong>Workflow</strong></dt>
+          <dd>describe/define something learned</dd>
+        </dl>
+
+    <hr>
+    <span style="float: left;"><a href="#">Edgility Class</a></span>
+    <span style="float: right;"><a href="http://www.las.ch">LAS</a></span>
+
+  </body>
+</html>
