--- a/self-powered-vehicle.html
+++ b/self-powered-vehicle.html
@@ -27,7 +27,7 @@
     <br>
     
     <p>
-      Describe what **job** this product does (why someone would choose to use it) and for whom it is targeted.
+      Describe what <strong>job</strong> this product does <em>(why someone would choose to use it)</em> and for whom it is targeted.
     </p>
 
     <hr>
