quick small updates

--- a/self-powered-vehicle-blog.html
+++ b/self-powered-vehicle-blog.html
@@ -22,9 +22,12 @@
   <body>
 
     <h1 style="text-align: center;">ProjectName Blog</h1>
+
+    <h2>Product Fit</h2>
     <p align="center" style="color:blue;">
       describe how this fits your organization
     </p>
+
     <h2>Acknowledge</h2>
       <p>describe and acknowledge the help you got</p>
       <dl>
@@ -34,7 +37,7 @@
           <dd>describe how they helped and the link to tweb page</dd>
       </dl>
       
-    <h2>Ideas</h2>
+    <h2>Ideas - to go further</h2>
       <p>how you could extend or go further with this project</p>
       <dl>
         <dt>Idea 1</dt>
@@ -43,7 +46,7 @@
 					<dd>description of idea 2</dd>
       </dl>
 
-    <h2>Technology</h2>
+    <h2>Technologies Learned</h2>
 	<p>describe or define the most interesting
         or helpful technical idea learned in each category below</p>
         <dl>
